[tool.poetry]
name = "porchlight"
version = "0.2.1"
description = "A function-managing package for models and systems with shared variables."
authors = ["Teal, D <teal.dillon@gmail.com>"]
license = "GNU General Public License v3.0 or later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
